src/styles.scss
// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@use "@angular/material" as mat;

@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "FS Sevegment";
  src: url(assets/fs_sevengment.otf);
}

// Plus imports for other components in your app.
@import "custom-palette";

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
@include mat.core();

// Define the palettes for your theme using the Material Design palettes available in palette.scss
// (imported above). For each palette, you can optionally specify a default, lighter, and darker
// hue. Available color palettes: https://material.io/design/color/
$alnitak-primary: mat.define-palette($primary-map);
$alnitak-accent: mat.define-palette($accent-map);

// The warn palette is optional (defaults to red).
$alnitak-warn: mat.define-palette(mat.$red-palette);

// Create the theme object. A theme consists of configurations for individual
// theming systems such as "color" or "typography".
$alnitak-theme: mat.define-dark-theme((color: (primary: $alnitak-primary,
        accent: $alnitak-accent,
        warn: $alnitak-warn,
      ),
    ));

// Include theme styles for core and each component used in your app.
// Alternatively, you can import and @include the theme mixins for each component
// that you are using.
@include mat.all-component-themes($alnitak-theme);

html {
  --mat-toolbar-title-text-font: Roboto, sans-serif;
  --mat-toolbar-title-text-line-height: 32px;
  --mat-toolbar-title-text-size: 20px;
  --mat-toolbar-title-text-tracking: 0.0125em;
  --mat-toolbar-title-text-weight: 500;
}

.list-item-active {
  background: mat.get-theme-color($alnitak-theme,
      primary,
      default,
      0.5) !important;
}

/* You can add global styles to this file, and also import other style files */

html,
body {
  @apply h-full;
}

body {
  @apply font-body m-0;
}

kbd {
  @apply border border-solid border-gray-200 px-1 rounded text-gray-200;
}

mat-sidenav[data-style-dense] {
  @include mat.toolbar-density(-3);
  @include mat.list-density(-3);
  @include mat.input-density(-3);
  @include mat.form-field-density(-3);
}

.mat-mdc-icon-button {
  @apply leading-none;
}

